--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,8 @@ li {
 
 /* General */
 body {
+  position: absolute;
+  inset: 0;
   font-family: "Inter", sans-serif;
   background-color: #e9e9e9;
   height: 100dvh;
@@ -46,14 +48,24 @@ body {
   overflow: hidden;
 }
 
-#root {
-  height: 100dvh;
+@supports (height: 100dvh) {
+  #root {
+    height: 100dvh
+  }
+}
+
+@supports not (height: 100dvh) {
+  #root {
+    height: 100vh;
+  }
 }
 
 button:not(:disabled),
 *[role="button"] {
   cursor: pointer;
 }
+
+/* Utils */
 
 .relative {
   position: relative;
@@ -72,6 +84,10 @@ button:not(:disabled),
 .text-red,
 .text-red a {
   color: var(--clr-red);
+}
+
+.text-center {
+  text-align: center;
 }
 
 .no-shrink {
@@ -127,4 +143,12 @@ body.prevent-scroll #main {
   -webkit-box-orient: vertical;
   display: -webkit-box;
   -webkit-line-clamp: 1;
+}
+
+.center {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
