--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ li {
   --clr-light-gray: #e9e9e9;
   --clr-red: #ff2626;
   --clr-yellow: #ffc200;
-  --clr-blue: #1e7ed4;
+  --clr-blue: #3471e7;
   --clr-white: #fff;
 
   --fs-medium: 500;
